--- a/index.html
+++ b/index.html
@@ -1,20 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Param Sehrawat</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55" rel="stylesheet">
+    <title>Param Sehrawat - Developer</title>
+    <style>
+        body { margin: 0; }
+        canvas { display: flex; }
+    </style>
+    <style>
+        @font-face {
+            font-family: 'HelveticaNeueItalic';
+            src: url('fonts/HelveticaNeue-ThinItalic.woff') format('woff');
+        }
+
+        .custom-font {
+            font-family: 'HelveticaNeueItalic', sans-serif;
+        }
+        body {
+            background-color: black;
+            color: white;
+            display: flex;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Helvetica Neue', sans-serif;
+
+        }
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        p {
+            margin-top: 1.3em;
+            font-size: 1em;
+        }
+        .content {
+            text-align: left;
+        }
+    </style>
+</head>
+<body>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script>
+        let camera, scene, renderer, points;
+
+        init();
+        animate();
+
+        function init() {
+            // Camera setup
+            camera = new THREE.PerspectiveCamera(75, (window.innerWidth/2) / window.innerHeight, 0.1, 1000);
+            camera.position.z = 5;
+
+            // Scene setup
+            scene = new THREE.Scene();
+
+            // Renderer setup
+            renderer = new THREE.WebGLRenderer();
+            renderer.setSize(window.innerWidth/2, window.innerHeight);
+            document.body.appendChild(renderer.domElement);
+
+            // Create a sphere and use its vertices to create the point cloud
+            let sphereGeometry = new THREE.SphereGeometry(1.75, 64, 64);
+            let material = new THREE.PointsMaterial({ color: 0xffffff, size: 0.01 });
+            points = new THREE.Points(sphereGeometry, material);
+            scene.add(points);
+
+            // Handle window resize
+            window.addEventListener('resize', onWindowResize, false);
+
+            // Add mousemove event listener
+            document.addEventListener('mousemove', onMouseMove, false);
+        }
+
+        function animate() {
+            requestAnimationFrame(animate);
+            render();
+        }
+
+        function render() {
+            // Rotate the points to get a simple animation effect
+            points.rotation.x += 0.002;
+            points.rotation.y += 0.004;
+
+            renderer.render(scene, camera);
+        }
+
+        function onWindowResize() {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        }
+
+        function onMouseMove(event) {
+            // Calculate mouse position in normalized device coordinates
+            let mouseX = (event.clientX / window.innerWidth) * 2 - 1;
+            let mouseY = -(event.clientY / window.innerHeight) * 2 + 1;
+
+            // Update the points position based on the mouse movement
+            points.rotation.x = mouseY * 0.5;
+            points.rotation.y = mouseX * 0.5;
+        }
+
+    </script>
+    
+    <div class="content">
+        <h1>Param Sehrawat</h1>
+        <p>Developer</p>
+        <p style="font-family: 'HelveticaNeueItalic';">param@sehraw.at</p>
+    </div>
+</body>
 </html>
